# cellular_automata

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: rule.h  rule_2d.h  rule_bin.h  rule_cont.h  rule_i.h  rule_tct.h  visualizer.h
src/: main.cpp  main_2d.cpp  main_all_tct.cpp  main_cont.cpp  main_single.cpp  rule.cpp  rule_2d.cpp  rule_bin.cpp  rule_cont.cpp  rule_tct.cpp  visualizer.cpp
